<resources>
    <string name="app_name">My Movies</string>
        <string name="hello_world">Hello world!</string>
        <string name="send_by_email">Send by E-mail</string>
        <string name="send_by_whatsApp">Send by whatsApp</string>
        <string name="send_by_message">Send by message</string>
        <string name="Colors_white">white</string>
        <string name="colors_red"> red</string>
        <string name="colors_blue">blue </string>
        <string name="colors_green">green</string>
        <string name="edit">Edit</string>
        <string name="delete">Delete</string>
        <string name="cancel">Cancel</string>
        <string name="exit">Exit</string>
        <string name="drawer_open">Open</string>
        <string name="drawer_close">Close</string>
        <string name="english">English</string>
        <string name="DrawerMenu">Menu</string>
        <string name="hebrew">עברית</string>
        <string name="share">Share with...</string>
        <string name="title_activity_main2">Main2Activity</string>
        <string name="deleteAllButton">Delete all</string>
        <string name="showAllButton">Show all</string>
        <string name="showByIdButton">Show by id</string>
        <string name="simpleCursorButton">Simple cursor</string>
        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="action_settings">Settings</string>
        <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="drop_box">DropBox</string>
        <string name="title_activity_internet_movie"></string>
        <string name="SearchOnline">Search: </string>
        <string name="InternetHint">Enter a movie to search</string>
        <string name="SearchImage">searchImage</string>
        <string name="CancelButton">Cancel</string>
        <string name="save">Save</string>
        <string name="clear">Clear</string>
        <string name="year">Year</string>
        <string name="movieTitle">Movie title</string>
        <string name="deleteAllMovies">Delete all movies</string>
        <string name="sureDeleteAll">Are you sure you want to delete all movies?</string>
        <string name="DeleteAllButton">Delete all movies</string>
        <string name="searchDialog">search</string>
        <string name="whatLooking">what are you looking for?</string>
        <string name="search">search</string>
        <string name="rating">Set your rating</string>
        <string name="watched">watched</string>
    <string name="movieAdded">Movie created successfully</string>
    <string name="deletedSucess">Movie deleted successfully</string>
    <string name="sucessfullySent">Movie sent successfully</string>
    <string name="nothingAdded">Nothing added</string>
    <string name="colorsChange">go under settings to change color at any time</string>
    <string name="languageChange">go under settings to change language at any time</string>
    <string name="actors">Actors</string>
    <string name="plot">Plot</string>
    <string name="genre">Genre</string>
    <string name="director">Director</string>
    <string name="url">URL</string>
    <string name="imdbRating">IMDB rating</string>
    <string name="imdb_id">imdb id</string>
    <string name="poster">poster</string>
    <string name="type">type</string>
    <string name="addMovieDialog">Add movie</string>
    <string name="dialogNessage">how would you like to add your movie?</string>
    <string name="Manually">Manually</string>
    <string name="InternetAdd">Internet</string>
    <string name="problemDownloadImage">Problem downloading image. Try again later</string>
    <string name="Loading">Loading...</string>
    <string name="backgroundTitle">Background</string>
    <string name="whichColor">which background color would you like?</string>
    <string name="blue">blue</string>
    <string name="green">green</string>
    <string name="red">red</string>
    <string name="pressToEnlarge">press to enlarge</string>
    <string name="isNotOnList">is not in your moviesList</string>
    <string name="SureToExit">Are you sure you want to exit?</string>
    <string name="Exit">Exit</string>
    <string name="advancedOptions">Advanced options</string>
    <string name="mustFill">You must the Title field</string>
    <string name="error">Error</string>
</resources>

