<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/colorsChangeRed"
        android:title="@string/colors_red"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/colorsChangeBlue"
        android:title="@string/colors_blue"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/colorsChangeGreen"
        android:title="@string/colors_green"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/colorsChangeWhite"
        android:title="@string/Colors_white"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/hebrew"
        android:title="@string/hebrew"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/english"
        android:title="@string/english"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/exit"
        android:title="@string/exit"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
