<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <item
            android:id="@+id/send_by_email"
            android:icon="@drawable/email"
            android:title="@string/send_by_email"
            app:showAsAction="always|withText" />

        <item
            android:id="@+id/send_by_whatsApp"
            android:icon="@drawable/whatsapp"
            android:title="@string/send_by_whatsApp"
            app:showAsAction="always|withText" />

        <item
            android:id="@+id/send_by_message"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/hebrew"
            app:showAsAction="always|withText" />



    </menu>
